<resources>
    <string name="app_name">Touchlab</string>
    <string name="actors">Actors:</string>
    <string name="input_actors">Type Row Column Direction</string>
    <string name="default_actor1">L 2 5 3</string>
    <string name="default_actor2">VR 4 2 5</string>
    <string name="default_actor3">S 1 1</string>
    <string name="default_actor4">R</string>
    <string name="default_actor5">L 3 3 2</string>
    <string-array name="actor_array">
        <item>@string/default_actor1</item>
        <item>@string/default_actor2</item>
        <item>@string/default_actor3</item>
        <item>@string/default_actor4</item>
        <item>@string/default_actor5</item>
    </string-array>
    <string name="number_of_rows"># of rows</string>
    <string name="number_of_columns"># of columns</string>
    <string name="run_simulation">Run Simulation</string>
    <string name="output_of_simulation">Output of Simulation</string>
    <string name="layout_rows">Rows :</string>
    <string name="layout_columns">Columns :</string>
    <string name="layout_frames">Frames :</string>
    <string name="newValue">R</string>
</resources>
