<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.michael.touchlab.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actors"/>
    <EditText
        android:id="@id/actor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_actors"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:text="@string/default_actor1"
        android:windowSoftInputMode="stateHidden"
        />
    <EditText
        android:id="@id/actor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_actors"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:text="@string/default_actor2" />
    <EditText
        android:id="@id/actor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_actors"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:text="@string/default_actor3" />
    <EditText
        android:id="@id/actor_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_actors"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:text="@string/default_actor4" />
    <EditText
        android:id="@id/actor_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_actors"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:text="@string/default_actor5" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@id/grid_rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_rows"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:text="@integer/default_rows"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingStart="70dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/layout_rows" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@id/grid_columns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_columns"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:text="@integer/default_columns"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingStart="70dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/layout_columns" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@id/frames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_columns"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:text="@integer/default_frames"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingStart="70dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/layout_frames" />
    </FrameLayout>
    <Button
        android:id="@id/run_simulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_simulation" />
    <TextView
        android:id="@id/simulationOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_of_simulation" />
    <android.support.design.widget.FloatingActionButton
        android:id="@id/addActor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_action_add_actor"
        app:elevation="4dp"
        />
</LinearLayout>
</ScrollView>